<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/tree">
            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_spines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/spine_thorns"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/checkbox_spines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_latex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/latex"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_latex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_otherExudate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/other_exudate"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_otherExudate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_simpleLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/simple_leaves"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_simpleLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_compoundLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/compound_leaves"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_compundleaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_pinnateLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/pinnate_leaves"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_pinnateLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_oppositeSimpleLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/opposite_simple_leaves"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_oppositeSimpleLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_oppositeCompoundLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/opposite_compound_leaves"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_oppositeCompoundLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_leafBlade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/leaf_blade_entire"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_leafBlade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_longStalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/long_stalk"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_longStalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_palmatelyNerved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/palmately_nerved"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_palmatelyNerved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_leafBladeDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/leaf_blade_divided"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                />
            <CheckBox
                android:id="@+id/chekbox_leafBladeDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:onClick="onCheckboxClicked"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:text="Find Plant"
            android:layout_gravity="center"
            android:background="@drawable/buttonstyle"
            android:onClick="onClick"/>
    </LinearLayout>
</LinearLayout>